We now support Tenable.io as a scanner

--- a/jmvc/seccubus/scan/create/views/init.ejs
+++ b/jmvc/seccubus/scan/create/views/init.ejs
@@ -14,32 +14,32 @@
 <h2>Create a new scan</h2>
 <table class='noborder'>
 	<tr><td class='noborder'>
-		<label for='name'>Name</label> 
+		<label for='name'>Name</label>
 	</td><td class='noborder'>
 		<input type='input' size=78 name='name' id='newScanName'/>
 	</td></tr>
 	<tr><td class='noborder'>
-		<label for='scanner'>Scanner</label> 
+		<label for='scanner'>Scanner</label>
 	</td><td class='noborder'>
 		<select name='scanner' id='newScanScanner'/></select>
 	</td></tr>
 	<tr id='newScanOtherScannerRow'><td class='noborder'>
-		<label for='otherScanner'>Specify scanner:</label> 
+		<label for='otherScanner'>Specify scanner:</label>
 	</td><td class='noborder'>
 		<input type=input size=78 name='otherScanner' id='newScanOtherScanner'/></select>
 	</td></tr>
 	<tr><td class='noborder'>
-		<label for='parameters'>Parameters</label> 
+		<label for='parameters'>Parameters</label>
 	</td><td class='noborder'>
 		<input type='input' size=78 name='parameters' id='newScanParam'/>
 	</td></tr>
         <tr id='newScanPasswordRow'><td class='noborder'>
-                <label for='password'>Password</label>
+                <label id='newScanPasswordLabel' for='password'>Password</label>
         </td><td class='noborder'>
                 <input type='password' size=78 name='password' id='newScanPassword'/>
         </td></tr>
 	<tr><td class='noborder'>
-		<label for='targets'>Hosts</label> 
+		<label for='targets'>Hosts</label>
 	</td><td class='noborder'>
 		<textarea rows=5 cols=59 name='targets' id='newScanTargets'/>
 	</td></tr>
