--- a/jmvc/seccubus/scan/edit/views/init.ejs
+++ b/jmvc/seccubus/scan/edit/views/init.ejs
@@ -1,4 +1,4 @@
-<%# Copyright 2014 Frank Breedijk, Artien Bel (Ar0xA), Petr                  %>
+<%# Copyright 2012-2017 Frank Breedijk, Artien Bel, Petr                     %>
 <%#                                                                          %>
 <%# Licensed under the Apache License, Version 2.0 (the "License");          %>
 <%# you may not use this file except in compliance with the License.         %>
