--- a/angular-seccubus/src/app/app.component.html
+++ b/angular-seccubus/src/app/app.component.html
@@ -1,2 +1,7 @@
 <h1>{{title}}</h1>
-<app-workspaces></app-workspaces>
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/workspaces">Workspaces</a>
+</nav>
+<router-outlet></router-outlet>
+<app-messages></app-messages>
