--- a/angular-seccubus/src/app/workspaces/workspaces.component.css
+++ b/angular-seccubus/src/app/workspaces/workspaces.component.css
@@ -1,8 +1,4 @@
 /* HeroesComponent's private CSS styles */
-.selected {
-  background-color: #CFD8DC !important;
-  color: white;
-}
 .workspaces {
   margin: 0 0 2em 0;
   list-style-type: none;
@@ -10,28 +6,33 @@
   width: 15em;
 }
 .workspaces li {
-  cursor: pointer;
   position: relative;
-  left: 0;
+  cursor: pointer;
   background-color: #EEE;
   margin: .5em;
   padding: .3em 0;
   height: 1.6em;
   border-radius: 4px;
 }
-.workspaces li.selected:hover {
-  background-color: #BBD8DC !important;
-  color: white;
-}
+
 .workspaces li:hover {
   color: #607D8B;
   background-color: #DDD;
   left: .1em;
 }
-.workspaces .text {
+
+.workspaces a {
+  color: #888;
+  text-decoration: none;
   position: relative;
-  top: -3px;
+  display: block;
+  width: 250px;
 }
+
+.workspaces a:hover {
+  color:#607D8B;
+}
+
 .workspaces .badge {
   display: inline-block;
   font-size: small;
@@ -43,6 +44,8 @@
   left: -1px;
   top: -4px;
   height: 1.8em;
+  min-width: 16px;
+  text-align: right;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
