--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,15 +15,12 @@
         //alert(top.location.protocol + "-" + top.location.host + "-" + top.location.pathname );
         if ( top.location.host == "127.0.0.1:4000" || top.location.host == "localhost:4000") { // Local Jekyll server
             document.documentElement.style.display = 'block';
-        } else if ( top.location.host == "www.seccubus.com" ) { // Correct URL
+        } else if ( top.location.host == "www.seccubus.com" || top.location.host == "bla.seccubus.com" ) { // Correct URL
             if ( top.location.protocol == "https:" ) { // are we on https?
                 document.documentElement.style.display = 'block';
             } else {
                 top.location = "https://www.seccubus.com" + top.location.pathname;
             }
-        } else if ( top.location.host == "bla.seccubus.com" ) { // Somehow we ended at origin
-            //top.location = "https://www.seccubus.com" + top.location.pathname;
-            // Redirect to CDN url
         } else {
             var r = confirm("It seems like the page at " + top.location + "is trying to frame " + window.location + ".\nAre you ok if I redirect you to " + window.location + " to view this content?");
             if ( r == true ) {
