--- a/css/app.css
+++ b/css/app.css
@@ -1771,7 +1771,7 @@ th.hide-for-touch { display: table-cell !important; }
 .highlight .na { color: teal; }
 
 /* Name.Attribute */
-.highlight .nb { color: #0086b3; }
+.highlight .nb { color: #53b300; } 
 
 /* Name.Builtin */
 .highlight .nc { color: #445588; font-weight: bold; }
@@ -1792,10 +1792,10 @@ th.hide-for-touch { display: table-cell !important; }
 .highlight .nn { color: #555555; }
 
 /* Name.Namespace */
-.highlight .nt { color: navy; }
+.highlight .nt { color: cyan; }
 
 /* Name.Tag */
-.highlight .nv { color: teal; }
+.highlight .nv { color: #17ca0e; }
 
 /* Name.Variable */
 .highlight .ow { font-weight: bold; }
@@ -1831,7 +1831,7 @@ th.hide-for-touch { display: table-cell !important; }
 .highlight .se { color: #dd1144; }
 
 /* Literal.String.Escape */
-.highlight .sh { color: #dd1144; }
+.highlight .sh { color: orange; }
 
 /* Literal.String.Heredoc */
 .highlight .si { color: #dd1144; }
@@ -1843,7 +1843,7 @@ th.hide-for-touch { display: table-cell !important; }
 .highlight .sr { color: #009926; }
 
 /* Literal.String.Regex */
-.highlight .s1 { color: #dd1144; }
+.highlight .s1 { color: yellow; }
 
 /* Literal.String.Single */
 .highlight .ss { color: #990073; }
